# LuaScript

./: CMakeLists.txt  README.md  Script.cpp  Script.hpp
examples/: test.cpp  test.lua
src/: Script.cpp
